# passman-nextgen

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  sonar-project.properties
.github/workflows/: build.yml  ci.yml  secure-pipe.yml
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
backend/alembic/: env.py
backend/alembic/versions/: 286a1bd8337a_update_password_model.py  d327e50dbec1_initial_migration.py
backend/app/: database.py  main.py  models.py
backend/app/core/: config.py
backend/app/models/: __init__.py  password_entry.py  user.py
backend/app/routers/: auth.py  passwords.py  unsafe.py  users.py
backend/app/schemas/: auth.py  password.py
backend/app/utils/: crypto.py
frontend/: Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  theme.d.ts  theme.ts
frontend/src/components/: Layout.tsx  PasswordDialog.tsx
frontend/src/pages/: Dashboard.d.ts  Dashboard.tsx  Login.tsx  Profile.tsx  Register.d.ts  Register.tsx
frontend/src/services/: api.ts  mockData.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
