[tool.poetry]
name = "passman-backend"
version = "0.1.0"
description = "A secure password manager backend with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.3,<0.35.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.41,<3.0.0"}
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.16.1,<2.0.0"
pydantic = {extras = ["dotenv"], version = ">=2.11.5,<3.0.0"}
pydantic-settings = ">=2.2.1,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
passlib = {extras = ["argon2"], version = ">=1.7.4,<2.0.0"}
cryptography = ">=45.0.3,<46.0.0"
python-multipart = ">=0.0.9,<0.1.0"
email-validator = ">=2.1.0,<3.0.0"
aiosqlite = ">=0.21.0,<0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
